--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -11,16 +11,17 @@
     color: white;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .logo {
     font-weight: 50;
 }
 
-.navButton {
-    margin-left: 20px;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-    color: darkblue;
+.navButton{
+  margin-left: 20px;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  color: #003580;
 }
