--- a/src/components/FeaturedProperties/featuredProperties.css
+++ b/src/components/FeaturedProperties/featuredProperties.css
@@ -9,10 +9,12 @@
 .fpItem {
     flex: 1;
     gap: 10px;
-    overflow: hidden;
     cursor: pointer;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 .fpItem Img {
@@ -22,12 +24,7 @@
     
 }
 
-/* .fpImg{
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-  }
-   */
+
 .fpName {
     color: #333;
     font-weight: bold;
@@ -41,7 +38,7 @@
     font-weight: 500;
 }
 
-.fpRating>button {
+.fpRating button {
     background-color: #003580;
     color: white;
     border: none;
@@ -50,6 +47,6 @@
     font-weight: bold;
 }
 
-.fpRating>span {
+.fpRating span {
     font-size: 14px;
 }
